# obsankipy

./: README.md  TODO.md  config.yaml  pyproject.toml  run  setup.py
ankimd/: __main__.py  config_parser.py  files.py  media.py  run.py  vault.py
ankimd/anki/: manager.py  requests.py  utils.py
ankimd/notes/: fields.py  manager.py  note.py
ankimd/notes/transformers/: fields.py
ankimd/utils/: helpers.py
examples/Obsankipy-Test/.obsankipy/: .Obsankipy-Test_file_hashes.json  .run_obsankipy  config.yaml
examples/Obsankipy-Test/100 - Knowledge/: Test.md
src/: config_parser.py  files.py  obsankipy.py  requirements.txt  run.py  vault.py
src/anki/: manager.py  requests.py
src/notes/: fields.py  manager.py  note.py
src/notes/transformers/: fields.py
src/utils/: helpers.py  patterns.py
